# Unitree-z1-Research

./: .gitignore  ARCHITECTURE_GUIDE.md  CLEANUP_SUMMARY.md  CLEAN_PROJECT_SUMMARY.md  COMPLETE_DOCUMENTATION.md  COMPLETE_FIX.md  DEVELOPER_KNOWLEDGE.md  FINAL_STATUS.md  GIT_COMMANDS.md  LICENSE  MODERN_BRANCH_README.md  README.md  README_SCRIPTS.md  REAL_HARDWARE_GUIDE.md  ROS2_PORT_README.md  SETUP_UBUNTU_20.04.md  SIMULATION_VS_REAL.md  START_HERE.md  SYSTEM_KNOWLEDGE.md  TECHNOLOGY_UPGRADE_ANALYSIS.md  TWO_TERMINAL_USAGE.md  UBUNTU_COMPATIBILITY_CHECK.md  arm_only_research.md  deployment_guide.md  emergency_stop_real.py  error.md  fix_gazebo.sh  fix_gazebo_issues.sh  jetson_setup.md  leverage_everything.bat  leverage_everything.sh  modern_setup.sh  modern_start.sh  push_to_main.sh  quick_start.sh  raspberry_pi_integration.md  remove_redundant_files.sh  research_implementations.md  ros2_setup.sh  ros2_start.sh  (+4 more)
src/unitree_ros/unitree_gazebo/launch/: z1.launch
src/z1_ros2/: CMakeLists.txt  package.xml
src/z1_ros2/config/: z1_controllers.yaml
src/z1_ros2/launch/: z1_gazebo.launch.py
src/z1_ros2/scripts/: z1_ai_assistant_ros2.py  z1_computer_vision_ros2.py  z1_controller_ros2.py  z1_keyboard_ros2.py  z1_web_ros2.py
src/z1_ros2/urdf/: z1.urdf.xacro
src/z1_tools/: CMakeLists.txt  README.md  package.xml
src/z1_tools/launch/: z1_xbox_control.launch
src/z1_tools/scripts/: modern_web_server.py  ros2_bridge.py  setup_xbox_controller.sh  z1_advanced_control.py  z1_ai_assistant.py  z1_bartender.py  z1_capabilities_demo.py  z1_chef.py  z1_chess_player.py  z1_cigar_roller.py  z1_computer_vision.py  z1_control_center.py  z1_cumbia.py  z1_dancer.py  z1_demo_simple.py  z1_drawing.py  z1_drummer.py  z1_emergency_stop.py  z1_jetson_ai_control.py  z1_juggler.py  z1_keyboard_control.py  z1_magician.py  z1_mime_artist.py  z1_motorcmd_sweep.py  z1_musician.py  z1_painter.py  z1_pick_place.py  z1_professional_suite.py  z1_pure_sdk_control.py  z1_real_robot_bridge.py  z1_safe_limits.py  z1_sdk_enhanced_control.py  z1_simple_control.py  z1_visual_programmer.py  z1_visual_programmer_enhanced.py  z1_wave.py  z1_web_api_service.py  z1_web_gui.py  z1_web_gui_enhanced.py  z1_xbox_control.py  (+1 more)
(+1 files in other folders)
